<resources>
    <string name="app_name">Кодер</string>
    <string name="Search_label" translatable="false">Введи имя, тег, почту</string>
    <string name="cancel" translatable="false">Отмена</string>
    <string name="Some_kind" translatable="false">Какой-то сверхразум все сломал</string>
    <string name="fix_it_quickly" translatable="false">Постараемся быстро починить</string>
    <string name="Try_again" translatable="false">Попробовать снова</string>
    <string name="We_didn" translatable="false">Мы никого не нашли</string>
    <string name="Try_to_correct" translatable="false">Попробуй скорректировать запрос</string>
    <string name="Sort" translatable="false">Sort</string>
    <string name="saucer" translatable="false">saucer</string>
    <string name="glass" translatable="false">glass</string>
    <string name="back" translatable="false">Back</string>
    <string name="photo" translatable="false">Photo</string>
    <string name="favorite" translatable="false">Favorite</string>
    <string name="phone" translatable="false">Phone</string>
    <string name="line" translatable="false">line</string>
    <string name="Sorting" translatable="false">Сортировка</string>
    <string name="alphabetically" translatable="false">По алфавиту</string>
    <string name="birthday" translatable="false">По дню рождения</string>
    <plurals name="plurals_years">
        <item quantity="one">%1$d год</item>
        <item quantity="two">%1$d года</item>
        <item quantity="few">%1$d года</item>
        <item quantity="many">%1$d лет</item>
        <item quantity="other">%1$d лет</item>
    </plurals>
</resources>