<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabGravity="fill"
            app:tabMode="auto"
            tools:ignore="SpeakableTextPresentCheck" />

    </androidx.viewpager.widget.ViewPager>

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/search_margin_top"
                android:layout_marginStart="@dimen/search_margin"
                app:boxBackgroundColor="@color/gray"
                app:boxCornerRadiusBottomEnd="@dimen/search_radius"
                app:boxCornerRadiusBottomStart="@dimen/search_radius"
                app:boxCornerRadiusTopEnd="@dimen/search_radius"
                app:boxCornerRadiusTopStart="@dimen/search_radius"
                app:hintEnabled="false"
                app:layout_constraintEnd_toStartOf="@+id/bt_cancel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:startIconDrawable="@drawable/ic_search"
                app:style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_search"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Search_label"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/bt_sort"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toBottomOf="@+id/textField"
                app:layout_constraintEnd_toStartOf="@+id/bt_cancel"
                app:layout_constraintTop_toTopOf="@+id/textField"
                app:srcCompat="@drawable/ic_sort"
                android:contentDescription="@string/Sort" />

            <Button
                android:id="@+id/bt_cancel"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textField" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/lo_error"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="@dimen/saucer_size"
            android:layout_height="@dimen/saucer_size"
            app:srcCompat="@drawable/flying_saucer"
            android:contentDescription="@string/saucer" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/try_margin"
            android:text="@string/Some_kind"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fix_it_quickly" />

        <Button
            android:id="@+id/bt_try"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Try_again"
            android:textAllCaps="false" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/lo_no_data"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible">

        <ImageView
            android:layout_width="@dimen/saucer_size"
            android:layout_height="@dimen/saucer_size"
            app:srcCompat="@drawable/magnifying_glass"
            android:contentDescription="@string/glass" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/try_margin"
            android:text="@string/We_didn"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Try_to_correct" />

    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>