<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/dialog_header_margin_vertical"
        android:text="@string/Sorting"
        android:textColor="@color/black"
        android:textSize="@dimen/dialog_header_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_radio_group_height"
        android:layout_marginHorizontal="@dimen/dialog_radio_group_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <RadioButton
            android:id="@+id/alphabetically"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dialog_radio_margin_top"
            android:checked="true"
            android:text="@string/alphabetically"
            android:textColor="@color/black"
            android:textSize="@dimen/dialog_button_size" />

        <RadioButton
            android:id="@+id/birthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dialog_radio_margin_top"
            android:text="@string/birthday"
            android:textColor="@color/black"
            android:textSize="@dimen/dialog_button_size" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>